fixed issue with privacy not showing any changes made on component

--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -61,7 +61,6 @@
     transition: color 0.3s, border-color 0.3s; 
     cursor: pointer;
     border-radius: 20px;
-    width: 20%;
 }
 
 .submit-btn:hover {
